--- a/day1/drum.css
+++ b/day1/drum.css
@@ -2,12 +2,17 @@ body{
     background-image: url("magicpattern-grid-pattern-1693741672301.png");
 }
 
-
+.keys{
+    display: flex;
+    flex: 1;
+    min-height: 100vh;
+    align-items: center;
+    justify-content: center;
+}
  .key {
-     display: inline-block;
-     margin: 10px;
-     padding: 10px;
-     border: 2px solid #333;
+     margin: 20px;
+     padding: 20px;
+     border: 3px solid red;
      background-color: #ddd;
      text-align: center;
      font-size: 20px;
